# imb-scanner

./: .env.example  .gitignore  CHANGELOG.md  MID_Lkp.xlsx  README.md  app.py  cli_app.py  conftest.py  desktop.ini  failed_scan_store.py  intelligent_mail_barcode.py  logging_config.py  pyproject.toml  requirements.txt  stid_table.py  test_suite.py  zapp.py  zzapp.py
tests/: test_label_corpus.py  test_pdf_detection.py
tools/: label_corpus.py
