[project]
name = "usps-imb-scanner"
version = "0.2.0"
description = "Deterministic USPS Intelligent Mail Barcode detector and decoder"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "abryan-io" }]
dependencies = [
    "streamlit>=1.28",
    "opencv-python-headless>=4.8",
    "numpy>=1.26",
    "Pillow>=10",
    "PyMuPDF>=1.24",
    "openpyxl>=3.1",
    "boto3>=1.34",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "cli_app.py",
    "app.py",
    "intelligent_mail_barcode.py",
    "stid_table.py",
    "logging_config.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
